# 2018_Huawei_Soft_Challenge

./: README.md
ecs/ecs/: .get_exsmooth.cpp.swp  .getleast.cpp.swp  .main.cpp.swp  2.cpp  CMakeLists.txt  Timeseriers.cpp  _w  a.out  adjust_data.cpp  adjust_data.h  aicc.cpp  aicc.h  brain.h  ecs.cpp  evaluate.cpp  evaluate.h  exsmooth.h  getBP.cpp  getBP.h  get_config.cpp  get_config.h  get_data.cpp  get_data.h  get_exsmooth.cpp  getar.h  getar1.h  getbrain.cpp  getleast.cpp  getplan.cpp  getplan.h  getplan2.cpp  leastsquare.h  main.cpp  main.h  predict.cpp  predict.h  print.cpp  print.h  test.cpp  test.h
ecs/ecsBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ecs.sln  ecs.vcxproj  ecs.vcxproj.filters
ecs/ecsBuild/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
ecs/ecsBuild/ecs.dir/Debug/ecs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  ecs.lastbuildstate
